# meatballs

./: .gitignore  CMakeLists.txt  LEVEL_1.md  LEVEL_2.md  README.md
benchmarks/: CMakeLists.txt  level_1.cpp  level_2.cpp
include/: sgemv.hpp  ssymv.hpp  strmv.hpp  utilities.hpp
include/meatballs/: level_1.hpp  level_2.hpp
include/meatballs/double/: level_1.hpp
include/meatballs/single/: level_1.hpp  level_2.hpp
level_3/: .gitignore  CMakeLists.txt  README.md  xmake.lua
level_3/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_reporter.cpp  main.cpp  plot.py  plot_reporter.cpp  results.md  util.hpp
level_3/include/gemm/: gemm.hpp
level_3/include/gemm/detail/: kernels.hpp  kernels_1xx.hpp  kernels_2xx.hpp  kernels_4xx.hpp  kernels_8xx.hpp
level_3/test/: CMakeLists.txt  kernels.cpp  special_cases.cpp  square.cpp  util.hpp  various_dimensions.cpp
tests/: CMakeLists.txt  level_1.cpp  level_2.cpp
